--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/DeliveryBoy/PendingOrderRequests.cshtml
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/DeliveryBoy/PendingOrderRequests.cshtml
@@ -72,7 +72,7 @@
                                     Quantity(Nos)
                                 </td>
                             </tr>
-                            @foreach (var dish in Model.Cart)
+                            @foreach (var dish in item.CartDetails)
                             {
                                 <tr>
                                     <td class="text-center border border-1 border-dark">
@@ -132,6 +132,7 @@
             data: { "id": id },
             success: function (data) {
                 alert(data)
+                location.reload();
             },
             error: function (err) {
                 alert(err)
