--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Shared/_AdminLayout.cshtml
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Shared/_AdminLayout.cshtml
@@ -61,28 +61,31 @@
     </div>
     <div class="sidebar">
         <ul class="no-bullets">
-            <li>
+            <li class="nav-item fs-4 me-4 mt-2 mx-auto text-center my-auto sideBarLi">
+               <h3 class="mt-3"> Hi, Admin</h3>
+            </li>
+            <li class="sideBarLi">
                 <a class="nav-link " href="/Admin/CategoryList">Food Category List</a>
             </li>
 
-            <li class=" dropdown">
+            @*<li class=" dropdown sideBarLi">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     User Database
                 </a>
                 <ul class="dropdown-menu" role="menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="#">Customers</a></li>
-                    <li><a class="dropdown-item" href="#">Restaurants</a></li>
-                    <li><a class="dropdown-item" href="#">Delivery boys</a></li>
+                    <li><a class="dropdown-item " href="#">Customers</a></li>
+                    <li><a class="dropdown-item " href="#">Restaurants</a></li>
+                    <li><a class="dropdown-item " href="#">Delivery boys</a></li>
 
                 </ul>
-            </li>
-            <li class="dropdown">
+            </li>*@
+            <li class="dropdown sideBarLi">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Pending Approvals
                 </a>
                 <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="/Admin/ApprovalPendingRest">Restaurants</a></li>
-                    <li><a class="dropdown-item" href="/Admin/ApprovalPendingDelBoys">Delivery boys</a></li>
+                    <li><a class="dropdown-item " href="/Admin/ApprovalPendingRest">Restaurants</a></li>
+                    <li><a class="dropdown-item " href="/Admin/ApprovalPendingDelBoys">Delivery boys</a></li>
 
                 </ul>
             </li>
@@ -105,6 +108,14 @@
     <script src="~/Scripts/jquery-3.4.1.min.js"></script>
     <script src="~/Scripts/CreatedScripts/PageLoader.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
+
+    <script src="~/Scripts/CreatedScripts/OrderStatus.js"></script>
+    <script>
+        $(document).ready(function () {
+            $(".sideBarLi").append("<hr />");
+        });
+    </script>
+
 
 
 
