--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Shared/_RestaurantLayout.cshtml
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Shared/_RestaurantLayout.cshtml
@@ -34,7 +34,7 @@
         <div class="col-md-6 col-4 my-auto ms-auto">
             <nav class="navbar navbar-expand-lg bg-light ">
                 <div class="container-fluid">
-                    
+
                     <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -108,13 +108,13 @@
     <script src="~/Content/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/adb09e0e68.js" crossorigin="anonymous"></script>
 
-
+    <script src="~/Scripts/CreatedScripts/OrderStatus.js"></script>
+    <script>
+        $(document).ready(function () {
+            $(".sideBarLi").append("<hr />");
+        });
+    </script>
 </body>
 </html>
 
-<script>
-    $(document).ready(function () {
-        $(".sideBarLi").append("<hr />");
-    });
-</script>
 
