Cancel order proble fixed, redirect to addbank code generated

--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Cart/CartItemsDisplay.cshtml
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Cart/CartItemsDisplay.cshtml
@@ -408,6 +408,7 @@
                     location.href = "/Payment/SelectBankToPay";
                 }
                 else if (msg == "Success") {
+                    alert("Order has been placed :)");
                     location.href = "/Customer/ActiveOrders";
                 }
                 else {
