--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/ReviewNRating/DisplayReviews.cshtml
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/ReviewNRating/DisplayReviews.cshtml
@@ -75,3 +75,5 @@
     </div>
         </section>
 
+<script src="~/Scripts/jquery-3.4.1.min.js"></script>
+<script src="~/Scripts/CreatedScripts/NavIconHide.js"></script>
