--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Shared/_RestaurantLayout.cshtml
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Shared/_RestaurantLayout.cshtml
@@ -107,7 +107,7 @@
     <script src="~/Content/js/bootstrap.min.js"></script>
     <script src="~/Content/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/adb09e0e68.js" crossorigin="anonymous"></script>
-
+    <script src="~/Scripts/jquery-3.4.1.min.js"></script>
     <script src="~/Scripts/CreatedScripts/OrderStatus.js"></script>
     <script>
         $(document).ready(function () {
