--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Home/Home.cshtml
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Home/Home.cshtml
@@ -16,7 +16,7 @@
                 
                 <div>
 
-                    <button class="btn btn-outline-light btn-lg shadow btnExplore" style="display:none;" onclick="location.href='@Url.Action("Restaurants", "Restaurant")'">Explore here</button>
+                    <button class="btn btn-outline-light btn-lg shadow btnExplore" style="display:none;" onclick="location.href='@Url.Action("Restaurants", "Restaurant")'">Click me <i class="fa fa-hand-pointer-o" aria-hidden="true"></i></button>
                 </div>
 
             </div>
