--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Shared/_HomeLayout.cshtml
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Shared/_HomeLayout.cshtml
@@ -86,6 +86,13 @@
     <script src="https://kit.fontawesome.com/adb09e0e68.js" crossorigin="anonymous"></script>
     @*<script src="~/Scripts/jquery-3.4.1.min.js"></script>*@
     <script src="~/Scripts/CreatedScripts/PageLoader.js"></script>
+
+    <script>
+        $("li > a").click(function () {
+            $("li > a").removeClass("active");
+            $(this).addClass("active");
+        })
+    </script>
     
 
 
