--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Shared/_RestaurantLayout.cshtml
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Shared/_RestaurantLayout.cshtml
@@ -95,7 +95,7 @@
         }
         else
         {
-            Response.Redirect("~/Login/LogIn");
+            Response.Redirect("~/Login/Login");
 
         }
     </div>
