--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/DeliveryBoy/DeliveredOrders.cshtml
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/DeliveryBoy/DeliveredOrders.cshtml
@@ -63,7 +63,7 @@
                                     Quantity(Nos)
                                 </td>
                             </tr>
-                            @foreach (var dish in Model.Cart)
+                            @foreach (var dish in item.CartDetails)
                             {
                                 <tr>
                                     <td class="text-center border border-1 border-dark">
