--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Shared/_CustomerLayout.cshtml
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Shared/_CustomerLayout.cshtml
@@ -117,7 +117,7 @@
         }
         else
         {
-            Response.Redirect("~/Login/LogIn");
+            Response.Redirect("~/Login/Login");
 
         }
 
