--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Shared/_DeliveryStaffLayoutPage.cshtml
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Shared/_DeliveryStaffLayoutPage.cshtml
@@ -45,7 +45,7 @@
 
 
                             <li class="nav-item fs-4 my-auto ">
-                                <input type="submit" class="btn btn-danger btn-lg" value="Logout" onclick="location.href='@Url.Action("LogoutRestaurant", "Logout")'" />
+                                <input type="submit" class="btn btn-danger btn-lg" value="Logout" onclick="location.href='@Url.Action("LogoutDelBoy", "Logout")'" />
                             </li>
 
                         </ul>
@@ -59,21 +59,23 @@
         @{
             string[] arr = (string[])Session["StaffDetailsOnLayout"];
         }
-        <ul class="no-bullets">
-            <li class="nav-item fs-4 me-4 mt-2 mx-auto text-center my-auto sideBarLi">
+        <ul class="no-bullets sidenav">
+            <li class="nav-item  fs-4 me-4 mt-2 mx-auto text-center my-auto ">
                 <img src="@Url.Content(arr[0].ToString())" style="width:100px;height:100px" class="rounded-circle border border-dark border-3 " />
                 <h4 class="mt-3">@arr[1].ToString()</h4>
+                <hr />
             </li>
-            <li class="nav-item fs-5 me-4 my-auto sideBarLi">
-                <span class="rounded-circle bg-danger p-2 newReq" id="@TempData["NewRequest"].ToString()"   style="position: absolute; right: 10px; color: #fff; top: 180px; font-size: 12px; ">@TempData["NewRequest"].ToString()</span>
-                <a class="nav-link  " aria-current="page" href="/DeliveryBoy/PendingOrderRequests">New Requests</a>
+
+            <li class="nav-item  fs-5 me-4 my-auto sideBarLi">
+                <span class="rounded-circle bg-danger p-2 newReq" id="@TempData["NewRequest"].ToString()" style="position: absolute; right: 10px; color: #fff; top: 180px; font-size: 12px; ">@TempData["NewRequest"].ToString()</span>
+                <a class="nav-link current-page  " aria-current="page" href="/DeliveryBoy/PendingOrderRequests">New Requests</a>
             </li>
             <li class="nav-item fs-5 my-auto me-4 sideBarLi">
-                <a class="nav-link " href="/DeliveryBoy/AcceptedOrders">Accepted Orders</a>
+                <a class="nav-link current-page " href="/DeliveryBoy/AcceptedOrders">Accepted Orders</a>
             </li>
 
             <li class="nav-item fs-5 me-4 sideBarLi ">
-                <a class="nav-link " href="/DeliveryBoy/DeliveredOrders">Delivered orders</a>
+                <a class="nav-link current-page " href="/DeliveryBoy/DeliveredOrders">Delivered orders</a>
             </li>
         </ul>
 
@@ -86,7 +88,7 @@
         }
         else
         {
-            Response.Redirect("~/Login/LogIn");
+            Response.Redirect("~/Login/Login");
 
         }
 
@@ -100,6 +102,7 @@
     <script src="~/Content/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/adb09e0e68.js" crossorigin="anonymous"></script>
     <script src="~/Scripts/CreatedScripts/OrderStatus.js"></script>
+    <script src="~/Scripts/CreatedScripts/SideBar.js"></script>
     <script>
         $(document).ready(function () {
             $(".sideBarLi").append("<hr />");
@@ -118,12 +121,13 @@
             else {
                 $(selector).hide();
             }
-      
-                    
+
+
         }
 
-              
+
     </script>
+
 
 </body>
 </html>
