Admin layout debugging done

--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Shared/_AdminLayout.cshtml
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Shared/_AdminLayout.cshtml
@@ -96,7 +96,7 @@
 
     </div>
     <div class="content">
-        @if (Session["Restaurant"] != null)
+        @if (Session["Admin"] != null)
         {
 
             @RenderBody()
